# tsengcoin

./: README.md
basic-visible-derive/: Cargo.toml
basic-visible-derive/src/: lib.rs
cuda-miner/: Cargo.toml  README.md
cuda-miner/src/: lib.rs
docs/: Blocks.md  Chain-Requests.md  Mining.md  Networking.md  Node-Setup-Steps.md  Optimizations.md  Transactions.md  TsengScript.md  Wallets.md
guis/: chat-box  chat-box.cxx  chat-box.fl  chat-box.h  main.cxx  main.fl  main.h  new_alias.cxx  new_alias.fl  new_alias.h  new_chat  new_chat.cxx  new_chat.h  new_unlock_script.fl  settings.cxx  settings.fl  settings.h  view_aliases.fl
report/: Miner Stats Analysis.xlsx
tsengcoin-core/: .gitignore  Cargo.toml  README.md  build.rs  test-update.sh
tsengcoin-core/.cargo/: config.toml
tsengcoin-core/docs/: Networking.md  Transactions.md  TsengScript.md
tsengcoin-core/kernels/: cl_miner.cl  miner.ptx
tsengcoin-core/src/: banner.rs  command.rs  difficulty.rs  error.rs  fltk_helpers.rs  gui.rs  hash.rs  main.rs  script_error.rs  session_commands.rs  top_level_commands.rs  transaction.rs  tsengscript_interpreter.rs  wallet.rs
tsengcoin-core/src/commands/: cuda_debug.rs  debug.rs  mod.rs  session.rs  top_level.rs
tsengcoin-core/src/gui/: bridge.rs  fltk_helpers.rs  gui.rs  mod.rs
tsengcoin-core/src/gui/views/: chat_box.rs  chat_box_mock.rs  main_box.rs  mod.rs  new_alias.rs  new_chat.rs  new_transaction.rs  new_txn.rs  new_unlock_script.rs  settings.rs  view_aliases.rs  view_utxos.rs
tsengcoin-core/src/gui/views/txn_builder/: new_custom_txn.rs
tsengcoin-core/src/v1/: block.rs  block_verify.rs  block_verify_error.rs  chain_request.rs  chat.rs  encrypted_msg.rs  mod.rs  net.rs  request.rs  response.rs  state.rs  transaction.rs  txn_verify.rs  txn_verify_error.rs  verify.rs  verify_error.rs
tsengcoin-core/src/v1/miners/: api.rs  cl.rs  cuda.rs  mod.rs  stats.rs
tsengcoin-core/src/views/: chat_box.rs  main_box.rs  mod.rs  new_alias.rs  new_chat.rs  settings.rs
