[package]
name = "tsengcoin-core"
version = "0.1.0"
edition = "2021"

[features]
cuda_miner = ["cust", "cuda_builder", "nvvm", "rustc_codegen_nvvm"]
debug = []

[dependencies]
rand = "0.8.5"
bincode = "1.3.3"
serde = { version = "1.0.63", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ring = "0.16.20"
hex = "0.4.3"
serde-big-array = "0.4.1"
periodic = "0.1.1"
cust = { version = "0.3.2", optional = true }
ripemd = "0.1.3"
num-bigint = "0.4.3"
num-traits = "0.2.15"
base58check = "0.1.0"
crossbeam = "0.8.2"
regex = "1.7.0"
lazy_static = "1.4.0"

[build-dependencies]
cuda_builder = { version = "0.3.0", optional = true }
nvvm = { version = "0.1.1", optional = true }
rustc_codegen_nvvm = { version = "0.3.0", optional = true }
